# rules_docker_compose

./: README.md  WORKSPACE  defs.bzl
docker_compose/: BUILD.bazel  docker_compose.bzl  up.sh.tpl
toolchains/docker_compose/: BUILD.bazel  docker_compose_toolchain.bzl
