load(":docker_compose_toolchain.bzl", "docker_compose_toolchain")

package(default_visibility = ["//visibility:private"])

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

docker_compose_toolchain(
    name = "docker_compose_v2.1.0_linux_amd64",
    docker_compose_version = "2.1.0",
    tool = "@docker_compose_v2.1.0_linux_amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "docker_compose_v2.1.0_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":docker_compose_v2.1.0_linux_amd64",
    toolchain_type = ":toolchain_type",
)

docker_compose_toolchain(
    name = "docker_compose_v2.1.0_macos_amd64",
    docker_compose_version = "2.1.0",
    tool = "@docker_compose_v2.1.0_macos_amd64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "docker_compose_v2.1.0_macos_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":docker_compose_v2.1.0_macos_amd64",
    toolchain_type = ":toolchain_type",
)

docker_compose_toolchain(
    name = "docker_compose_v2.1.0_macos_arm64",
    docker_compose_version = "2.1.0",
    tool = "@docker_compose_v2.1.0_macos_arm64//file",
    visibility = ["//visibility:public"],
)

toolchain(
    name = "docker_compose_v2.1.0_macos_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    toolchain = ":docker_compose_v2.1.0_macos_arm64",
    toolchain_type = ":toolchain_type",
)
